--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
           stable: ${{ env.GO_STABLE }}
           go-version: ${{ env.GO_VERSION }}
       - run: go get ./...
-      - run: go test ./...
+      - run: go test -tags doccheck ./...
