ci: Use go1.19 with GOEXPERIMENT=unified
This commit updates the CI to use Go1.19. Because of an upstream
compiler bug, it is neccessary to set GOEXPERIMENT=unified.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,9 @@ name: CI
 on: [push, pull_request]
 
 env:
-  GO_VERSION: '^1.18'
+  GO_VERSION: '^1.19'
   GO_STABLE: 'true'
+  GOEXPERIMENT: 'unified'
 
 jobs:
   test:
