--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,4 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
       - run: go get ./...
       - run: go test -tags doccheck ./...
+      - run: go run ./cmd/errlint ./...
