--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push, pull_request]
 
 env:
-  GO_VERSION: '^1.23.3'
+  GO_VERSION: '^1.24.1'
   GO_STABLE: 'true'
 
 jobs:
@@ -22,3 +22,4 @@ jobs:
       - run: go get ./...
       - run: go test -tags doccheck ./...
       - run: go run ./cmd/errlint ./...
+      - run: bash lint.sh
