Remove errlint cmd
This commit entirely removes the errlint cmd, as it is better served by
error linters.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
           stable: ${{ env.GO_STABLE }}
           go-version: ${{ env.GO_VERSION }}
       - run: go get ./...
-      - run: go test -tags doccheck ./...
+      - run: go test ./... 
       - run: go run ./cmd/errlint ./...
       - run: bash lint.sh
